@@ -714,4 +714,17 @@ Quizá tarea en el timer tal cual para todo eso
 
 Temporizadores comunes de ver kick y ver mensajes
 
+ok-snapshot de ql: incluir parametros del chip de sonido. desde ql_audio_pitch1 hasta ql_audio_playing probablemente
+
+ok -ql: soporte zeng online.
+
+
+-First aid de advanced menu items
+
+-ventana que muestre render de buffer rainbow. "Video output" en menu debug quiza
+
+-Tiene sentido mantener habitaciones un tiempo sin usuarios?
+Si alguien entra, no será funcional porque al no haber el máster, el snapshot siempre será el mismo y el estado estará congelado. Aunque no se si en ese caso lo declara offline
+Quizá un setting en Zeng online server que diga si elimina salas sin jugadores
+
 ---------------
