@@ -54,6 +54,7 @@
 #include "zeng.h"
 #include "snap_zsf.h"
 #include "snap_ram.h"
+#include "zeng_online_client.h"
 
 
 z80_byte byte_leido_core_ql;
@@ -346,6 +347,8 @@ pc_intr equ     $18021  bits 4..0 set as pending level 2 interrupts
                     core_end_frame_check_zrcp_zeng_snap.v=0;
                     check_pending_zrcp_put_snapshot();
                     zeng_send_snapshot_if_needed();
+
+                    zeng_online_client_end_frame_from_core_functions();
                 }
 
 
