@@ -88,6 +88,7 @@
 #define ZSF_FLASH_STATE 61
 #define ZSF_KEY_PORTS_SPECTRUM_STATE 62
 #define ZSF_ZOC_ETC 63
+#define ZSF_I8049_AUDIO 64
 //Importante NO alterar los ID existentes o se rompera compatibilidad hacia atras del formato ZSF
 //Siempre agregar, nunca modificar ni borrar
 
